[package]
authors = ['Polkafoundry']
edition = '2018'
homepage = 'https://polkafoundry.com'
license = 'Unlicense'
name = 'polkasmith-runtime'
repository = 'https://github.com/polkafoundry/newpolka/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { version = '4.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.1.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Substrate dependencies
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master', optional = true }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

precompiles = { default-features = false, path = '../precompiles/' }
pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
pallet-ethereum = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }
#pallet-crowdloan-rewards = { default-features = false, path = '../../pallets/crowdloan-rewards' }

fp-rpc = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v0.0.1' }

cumulus-pallet-parachain-system = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-primitives-core = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-pallet-xcmp-queue =  { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-primitives-utility = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-pallet-xcm = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-ping = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-pallet-dmp-queue = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-pallet-aura-ext = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }

parachain-info = { default-features = false, git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }

polkadot-parachain = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'master' }
xcm = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'master' }
xcm-executor = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'master' }
xcm-builder = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'master' }
pallet-xcm = { default-features = false, git = 'https://github.com/paritytech/polkadot', branch = 'master' }

runtime-primitives = { default-features = false, path = '../../primitives' }
runtime-common = { default-features = false, path = '../common' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'fp-rpc/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-evm/std',
    'pallet-ethereum/std',
#    'pallet-crowdloan-rewards/std',
    'runtime-primitives/std',
    'runtime-common/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-io/std',
    'parachain-info/std',
    'cumulus-pallet-xcmp-queue/std',
    'cumulus-pallet-xcm/std',
    'cumulus-primitives-core/std',
    'cumulus-primitives-utility/std',
    'cumulus-ping/std',
    'cumulus-pallet-parachain-system/std',
    'cumulus-pallet-dmp-queue/std',
    'cumulus-pallet-aura-ext/std',
    'xcm/std',
    'xcm-builder/std',
    'xcm-executor/std',
]
